# iam-policy-maker

./: Makefile  README.md  pyproject.toml
examples/: sample_output.json
iam_policy_generator/: __init__.py  builder.py  cli.py  templates.py
terraform_module/: README.md  main.tf  outputs.tf  variables.tf
tests/: test_builder.py
